# nanobot-webbridge-plugin

./: .gitignore  README.md  pyproject.toml
nanobot_webbridge_plugin/: __init__.py  webbridge.py  webbridge_stream.py
src/: __init__.py  webbridge.py
