[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanobot-webbridge-plugin"
version = "1.0.0"
description = "WebBridge channel plugin for nanobot - universal web interface"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ramonpaolo", email = "ramonpaolo@example.com" }
]
keywords = ["nanobot", "webbridge", "chat", "agent", "webhook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/ramonpaolo/nanobot-webbridge-plugin"
Repository = "https://github.com/ramonpaolo/nanobot-webbridge-plugin"
Issues = "https://github.com/ramonpaolo/nanobot-webbridge-plugin/issues"

[project.entry-points."nanobot.channels"]
webbridge = "nanobot_webbridge_plugin:WebBridgeChannel"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
